syntax="proto3";

package serialization;
option go_package = "./;serialization";

// Keystore holds a list of keys per type.
// We use protobuf to serialize the whole keystore before encryption.
// One proto field per key type. 
message Keystore {
  repeated Key ed25519_keys = 1;
  repeated Key secp256k1_keys = 2;
}

message Key {
  string name = 1;
  bytes private_key = 2;
  int64 created_at = 3;
}
